# pvgsystem

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BOOTSTRAP_SPEC.md  CLAUDE.md  Dockerfile.api  Makefile  README.md  UPDATE_REPORT.md  VALIDATION_REPORT.md  consulta_tjsp_lote.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  secrets-manifest.yaml
.claude/: settings.json.template
.codex/: config.toml
app/: __init__.py  config.py
database/: README.md
docs/: 00-architecture-overview.md  01-why-claude-and-codex-are-separated.md  02-source-of-truth-model.md  03-how-canonical-artifacts-work.md  04-how-runtime-adapters-work.md  05-how-to-run-plan-max.md  06-how-to-answer-question-rounds.md  07-how-claude-resolves-assumptions.md  08-how-to-prepare-codex.md  09-how-to-start-codex-implementation.md  10-how-implementation-resumes-after-interruption.md  11-how-to-inspect-task-status.md  12-how-to-inspect-agent-activity.md  13-how-to-add-a-skill.md  14-how-to-add-an-agent.md  15-how-to-add-an-mcp.md  16-how-to-configure-a-database.md  17-how-to-configure-production.md  18-how-to-validate-runtime-parity.md  19-how-to-update-the-operating-system.md  20-how-to-archive-completed-projects.md  21-troubleshooting.md  22-frontend-references.md  README.md  backend-supabase-readiness.md
radar/: __init__.py
scripts/: analyze_idea.py  discover_runtime_capabilities.py  evaluate_completion_gates.py  final_acceptance_judge.py  gen_registries.py  gen_schemas.py  gen_templates.py  generate_canonical.py  generate_claude_adapter.py  generate_codex_adapter.py  generate_delivery_evidence.py  install_project_reference.py  (+10 more)
(+599 files in other folders)
